# Simple-EAN13-generator

./: Cargo.toml  Dioxus.toml  Makefile.toml  README.md  barcode.txt  barcode_ean13.py
.github/workflows/: deploy.yml
assets/: main.css
src/: Ean13Export.rs  Ean13setting.rs  main.rs
