[package]
name = "rust-ean13"
version = "0.1.0"
authors = ["andysdds <andywinghang@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rfd = "0.15"
open = "5"
tokio = { version = "1", features = ["time"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
