[package]
name = "rust-ean13"
version = "0.3.0"
authors = ["andysdds <andywinghang@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rfd = "0.15"
open = "5"
tokio = { version = "1", features = ["time"] }
svg2pdf = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
